Refactored config implementation to replace blocking queues with virtual thread-based task execution:
- Removed `BlockingQueue` usage in `ConfigSectionImpl`, `ConfigNodeImpl`, and `AbstractCommentable`.
- Introduced `Executors.newVirtualThreadPerTaskExecutor()` for asynchronous updates to nodes, sections, and comments.
- Replaced `pushChangesToQueue` methods with thread-safe update mechanisms.
- Simplified node and section processing logic; synchronized access to internal collections.
- Removed `MutableConfigNodeValueUpdateImpl` and related mutable value update handling.
- Added `valueOrDefault` to `ConfigNode` interface for improved default value support.