@@ -1,61 +1,34 @@
 package com.pixelatedslice.easyconfig.impl.comments;
 
-import com.pixelatedslice.easyconfig.api.EasyConfig;
 import com.pixelatedslice.easyconfig.api.comments.Commentable;
 import org.jspecify.annotations.NonNull;
 
-import java.util.*;
-import java.util.concurrent.BlockingQueue;
-import java.util.concurrent.LinkedBlockingQueue;
+import java.util.Collection;
+import java.util.List;
+import java.util.Objects;
 import java.util.function.Consumer;
 
 public abstract class AbstractCommentable implements Commentable {
-    private final String key;
-    private final List<String> comments;
+    private final @NonNull List<@NonNull String> comments;
 
-    private final @NonNull BlockingQueue<@NonNull Consumer<@NonNull Collection<@NonNull String>>> commentUpdateQueue =
-            new LinkedBlockingQueue<>();
-
-    protected AbstractCommentable(@NonNull String key, @NonNull List<@NonNull String> comments) {
-        Objects.requireNonNull(key);
+    protected AbstractCommentable(@NonNull List<@NonNull String> comments) {
         Objects.requireNonNull(comments);
-
-        this.key = key;
         this.comments = comments;
     }
 
     @Override
     public @NonNull List<@NonNull String> comments() {
-        return Collections.unmodifiableList(this.comments);
-    }
-
-    protected void pushChangesToQueue(
-            @NonNull Iterable<? extends @NonNull Consumer<@NonNull Collection<@NonNull String>>> commentUpdates
-    ) throws InterruptedException {
-        for (var commentUpdate : commentUpdates) {
-            this.commentUpdateQueue.put(commentUpdate);
+        synchronized (this.comments) {
+            return List.copyOf(this.comments);
         }
     }
 
-    private void processCommentUpdateQueue() {
-        while (true) {
-            try {
-                var consumer = this.commentUpdateQueue.take();
-                synchronized (this.commentUpdateQueue) {
-                    consumer.accept(this.comments);
-
-                    Collection<Consumer<Collection<String>>> drained =
-                            new ArrayList<>(EasyConfig.QUEUE_DRAINED_INITIAL_CAPACITY);
-                    this.commentUpdateQueue.drainTo(drained);
-
-                    for (var drainedConsumer : drained) {
-                        drainedConsumer.accept(this.comments);
-                    }
-                }
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-                System.out.printf("The comment update queue processing for section %s interrupted!%n", this.key);
-                break;
+    protected void updateComments(
+            @NonNull Iterable<? extends @NonNull Consumer<@NonNull Collection<@NonNull String>>> commentUpdates
+    ) {
+        synchronized (this.comments) {
+            for (var consumer : commentUpdates) {
+                consumer.accept(this.comments);
             }
         }
     }
